--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,9 @@ cache:
     - "node_modules"
 install:
   - npm install
-script:
-  - npm test
+deploy:
+  - provider: script
+    skip_cleanup: true
+    script: chmod +x ./deploy.sh && ./deploy.sh
+    on:
+      branch: master
